[package]
name = "pubsub"
version = "0.1.0"
edition = "2021"
# Remove this line if you want to be able to publish this crate as open source on crates.io.
# Otherwise, `publish = false` prevents an accidental `cargo publish` from revealing private source.
publish = false

[profile.release]
debug = 1

[dependencies]
base64 = "0.22"
fastly = "0.11"
hex = "0.4"
jwt-simple = "0.11"
rand = "0.9"
serde = "1"
serde_json = "1"
sha1 = "0.10"
thiserror = "2"
time = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(viceroy)'] }
